# LapPredictionEngine

./: CMakeLists.txt  README.md  build.bat  build.sh  custom_ggv.csv
docs/: GEAR_RATIO_GUIDE.md  gearLogicalFixV0.2.0.md
examples/: f1_2024_monaco.json  f1_2024_monza.json  f1_2024_normal.json  f1_2025_monaco.json  f1_2025_monza.json  f1_2025_normal.json  fsae_road_course.json  honda_civic_si_2025.json
include/data/: SimulationState.h
include/io/: JSONParser.h
include/physics/: PowertrainModel.h  TireModel.h
include/solver/: QuasiSteadyStateSolver.h
src/: main.cpp
src/data/: SimulationState.cpp  TrackData.cpp  VehicleParams.cpp
src/io/: JSONParser.cpp
src/physics/: AerodynamicsModel.cpp  PowertrainModel.cpp  TireModel.cpp
src/solver/: GGVGenerator.cpp  QuasiSteadyStateSolver.cpp
src/telemetry/: TelemetryLogger.cpp
